[package]
name = "turntie-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
argh = "0.1.10"
bytes = "1.4.0"
futures = "0.3.27"
tokio = { version = "1.26.0", features = ["rt", "macros", "io-util", "io-std"] }
tokio-util = { version = "0.7.7", features = ["codec"] }
turntie = { version = "0.1.0", path = "../turntie" }
