[package]
name = "turntie-cli"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/vi/turntie"
license = "MIT/Apache-2.0"
description = "Command-line tool for creating unreliable insecure channels over TURN servers"
categories = ["network-programming", "command-line-utilities"]
keywords = ["turn","channel","rfc8016","mobility"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
argh = "0.1.10"
bytes = "1.4.0"
futures = "0.3.27"
tokio = { version = "1.26.0", features = ["rt", "macros", "io-util", "io-std"] }
tokio-util = { version = "0.7.7", features = ["codec"] }
turntie = { version = "0.1.0", path = "../turntie" }
