[package]
name = "turntie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
base64 = "0.21.0"
bincode = "1.3.3"
bytes = "1.4.0"
flate2 = "1.0.25"
futures = "0.3.27"
pin-project = "1.0.12"
serde = {version="1",features=["derive"]}
tokio = { version = "1.26.0", features = ["net", "sync", "macros"] }
turnclient = { version = "0.5.0"}
