[package]
name = "turntie"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/vi/turntie"
license = "MIT/Apache-2.0"
description = "Library for creating simple communication channels using Mobility-enabled TURN servers. Like unreliable socketpair(2) for UDP."
categories = ["network-programming", "command-line-utilities"]
keywords = ["turn","channel","rfc8016","mobility","socketpair"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
base64 = "0.21.0"
bincode = "1.3.3"
bytes = "1.4.0"
flate2 = "1.0.25"
futures = "0.3.27"
pin-project = "1.0.12"
serde = {version="1",features=["derive"]}
tokio = { version = "1.26.0", features = ["net", "sync", "macros"] }
turnclient = { version = "0.5.0"}
